--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
       <h1>Nuts.mobi </h1>
+      <p>这个域名可以和nutsmobi.com做关联，可以吧nuts.mobi作为主域名，那样更简洁，然后由nutsmobi.com转入，或者这个域名作为中转域名转入到nutsmobi.com</p>
      <footer>©李君妮</footer>
     
   </body>
